--- a/packages/webpack-config-env/package.json
+++ b/packages/webpack-config-env/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "webpack-config-optimize",
+  "name": "webpack-config-env",
   "version": "0.1.0",
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
-  "main": "dist/optimize.webpack.config.js",
+  "main": "dist/env.webpack.config.js",
   "scripts": {
 		"prepublish": "./node_modules/.bin/babel -d dist src"
   },
