--- a/packages/webpack-config-babel/package.json
+++ b/packages/webpack-config-babel/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "webpack-config-build-info",
+  "name": "webpack-config-babel",
   "version": "0.1.0",
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/babel.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "dependencies": {
     "babel-loader": "^6.0.1"
   },
   "peerDependencies": {
-    "webpack": "*",
-    "babel": ">=6"
+    "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
