--- a/packages/webpack-config-build-info/package.json
+++ b/packages/webpack-config-build-info/package.json
@@ -4,7 +4,15 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/build-info.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "peerDependencies": {
     "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
