--- a/packages/webpack-config-json/package.json
+++ b/packages/webpack-config-json/package.json
@@ -4,10 +4,18 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/json.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "dependencies": {
     "json5-loader": "^0.6.0"
   },
   "peerDependencies": {
     "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
