--- a/packages/webpack-config-postcss/package.json
+++ b/packages/webpack-config-postcss/package.json
@@ -4,14 +4,23 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/postcss.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "dependencies": {
-    "autoprefixer-core": "^6.0.1",
+    "autoprefixer": "^6.0.3",
     "extract-text-webpack-plugin": "^0.9.0",
     "postcss-import": "^7.1.0",
+    "precss": "^1.3.0",
     "style-loader": "^0.13.0",
     "css-loader": "^0.21.0"
   },
   "peerDependencies": {
     "postcss": ">=5.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
