--- a/packages/webpack-config-source-maps/package.json
+++ b/packages/webpack-config-source-maps/package.json
@@ -4,7 +4,16 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/source-maps.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "peerDependencies": {
-    "webpack": "*"
+    "webpack": "*",
+    "source-map-support": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
