--- a/packages/webpack-config-vendor/package.json
+++ b/packages/webpack-config-vendor/package.json
@@ -4,11 +4,19 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/vendor.webpack.config.js",
+  "scripts": {
+		"prepublish": "./node_modules/.bin/babel -d dist src"
+  },
   "dependencies": {
     "webpack-split-by-path": "^0.0.6",
     "runtime-webpack-plugin": "^0.1.0"
   },
   "peerDependencies": {
     "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-metalab": "^0.1.1"
   }
 }
