--- a/packages/webpack-config-postcss/package.json
+++ b/packages/webpack-config-postcss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-config-postcss",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
@@ -12,6 +12,7 @@
     "autoprefixer": "^6.0.3",
     "extract-text-webpack-plugin": "^0.9.0",
     "postcss-import": "^7.1.0",
+    "postcss-require": "^0.1.0",
     "precss": "^1.3.0",
     "postcss-loader": "^0.7.0",
     "style-loader": "^0.13.0",
