--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.4",
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
     "build": "scripts/build.sh"
   },
   "dependencies": {
@@ -24,7 +25,7 @@
   "devDependencies": {
     "babel-cli": "^6.0.0",
     "babel-preset-metalab": "^0.1.1",
-    "eslint": "^1.8.0",
-    "eslint-config-metalab": "^0.3.0"
+    "eslint": "^2.0.0-alpha-2",
+    "eslint-config-metalab": "^1.0.0-rc.1"
   }
 }
