--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webpack-config-metalab",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
-    "build": "scripts/build.sh"
+    "prepublish": "./node_modules/.bin/babel -d ./ ./src/",
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore ."
   },
   "dependencies": {
     "webpack-config-babel": "^0.1.1",
