--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -d ./ ./src/",
-    "lint": "./node_modules/.bin/eslint ."
+    "lint": "./node_modules/.bin/eslint .",
+    "test": "npm run lint"
   },
   "dependencies": {
     "webpack-config-babel": "^0.1.1",
