--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "devDependencies": {
     "babel-cli": "^6.0.0",
     "babel-preset-metalab": "^0.1.1",
-    "eslint": "^2.0.0-alpha-2",
-    "eslint-config-metalab": "^1.0.0-rc.1"
+    "eslint": "^1.10.3",
+    "eslint-config-metalab": "^1.0.0-rc.4",
+    "eslint-plugin-filenames": "^0.2.0",
+    "eslint-plugin-import": "^0.11.0",
+    "eslint-plugin-react": "^3.11.2"
   }
 }
