--- a/packages/webpack-config-json/package.json
+++ b/packages/webpack-config-json/package.json
@@ -6,7 +6,7 @@
   "license": "CC0-1.0",
   "main": "dist/json.webpack.config.js",
   "scripts": {
-		"prepublish": "./node_modules/.bin/babel -d dist src"
+    "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
     "json5-loader": "^0.6.0"
@@ -15,7 +15,7 @@
     "webpack": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-metalab": "^0.1.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-metalab": "^0.2.0"
   }
 }
