--- a/packages/webpack-config-postcss/package.json
+++ b/packages/webpack-config-postcss/package.json
@@ -6,7 +6,7 @@
   "license": "CC0-1.0",
   "main": "dist/postcss.webpack.config.js",
   "scripts": {
-		"prepublish": "./node_modules/.bin/babel -d dist src"
+    "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
     "autoprefixer": "^6.0.3",
@@ -14,15 +14,15 @@
     "postcss-import": "^7.1.0",
     "postcss-require": "^0.1.0",
     "precss": "^1.3.0",
-    "postcss-loader": "^0.7.0",
+    "postcss-loader": "^0.8.0",
     "style-loader": "^0.13.0",
-    "css-loader": "^0.21.0"
+    "css-loader": "^0.23.1"
   },
   "peerDependencies": {
     "postcss": ">=5.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-metalab": "^0.1.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-metalab": "^0.2.0"
   }
 }
