--- a/packages/webpack-config-root/package.json
+++ b/packages/webpack-config-root/package.json
@@ -6,13 +6,13 @@
   "license": "CC0-1.0",
   "main": "dist/root.webpack.config.js",
   "scripts": {
-		"prepublish": "./node_modules/.bin/babel -d dist src"
+    "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "peerDependencies": {
     "webpack": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-metalab": "^0.1.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-metalab": "^0.2.0"
   }
 }
