--- a/packages/webpack-config-source-maps/package.json
+++ b/packages/webpack-config-source-maps/package.json
@@ -6,14 +6,14 @@
   "license": "CC0-1.0",
   "main": "dist/source-maps.webpack.config.js",
   "scripts": {
-		"prepublish": "./node_modules/.bin/babel -d dist src"
+    "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "peerDependencies": {
     "webpack": "*",
     "source-map-support": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-metalab": "^0.1.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-metalab": "^0.2.0"
   }
 }
