--- a/packages/webpack-config-stats/package.json
+++ b/packages/webpack-config-stats/package.json
@@ -6,16 +6,16 @@
   "license": "CC0-1.0",
   "main": "dist/stats.webpack.config.js",
   "scripts": {
-		"prepublish": "./node_modules/.bin/babel -d dist src"
+    "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
-    "stats-webpack-plugin": "^0.2.2"
+    "stats-webpack-plugin": "^0.3.0"
   },
   "peerDependencies": {
     "webpack": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-metalab": "^0.1.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-metalab": "^0.2.0"
   }
 }
