--- a/packages/webpack-config-babel/package.json
+++ b/packages/webpack-config-babel/package.json
@@ -4,12 +4,12 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
-  "main": "dist/babel.webpack.config.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
-    "babel-loader": "^6.2.1"
+    "babel-loader": "^6.2.1",
+    "webpack-partial": "^1.0.0"
   },
   "peerDependencies": {
     "webpack": "*"
