--- a/packages/webpack-config-json/package.json
+++ b/packages/webpack-config-json/package.json
@@ -4,12 +4,12 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
-  "main": "dist/json.webpack.config.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
-    "json5-loader": "^0.6.0"
+    "json5-loader": "^0.6.0",
+    "webpack-partial": "^1.0.0"
   },
   "peerDependencies": {
     "webpack": "*"
