--- a/packages/webpack-config-postcss/package.json
+++ b/packages/webpack-config-postcss/package.json
@@ -4,19 +4,19 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
-  "main": "dist/postcss.webpack.config.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
   "dependencies": {
     "autoprefixer": "^6.0.3",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^0.9.0",
     "postcss-import": "^7.1.0",
+    "postcss-loader": "^0.8.0",
     "postcss-require": "^0.1.0",
     "precss": "^1.3.0",
-    "postcss-loader": "^0.8.0",
     "style-loader": "^0.13.0",
-    "css-loader": "^0.23.1"
+    "webpack-partial": "^1.0.0"
   },
   "peerDependencies": {
     "postcss": ">=5.0.0"
