Fix lint revert index.

--- a/packages/webpack-config-stats/package.json
+++ b/packages/webpack-config-stats/package.json
@@ -4,6 +4,7 @@
   "author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
   "repository": "izaakschroeder/webpack-config-metalab",
   "license": "CC0-1.0",
+  "main": "dist/stats.webpack.config.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -s -d dist src"
   },
